virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapi-virtualservice
  namespace: default  
spec:
  hosts:
    - "*"  
  gateways:
    - fastapi-gateway  
  http:
    - match:
        - uri:
            prefix: /  
      route:
        - destination:
            host: fastapi-service  
            port:
              number: 80
